home overflow fix

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -12,6 +12,10 @@
 
 
 /*========================== BANNER ==========================*/
+.banner {
+    overflow-x: hidden;
+}
+
 .banner__card {
     position: relative;
     background-color: var(--purple-color);
